added swagger endpoints
